--- a/archives/toutiao-search/2023-10-01.md
+++ b/archives/toutiao-search/2023-10-01.md
@@ -1,57 +1,80 @@
 # 2023-10-01
 
-共 142 条
+共 165 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 01 2023 11:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Oct 01 2023 12:01:02 GMT+0800 (China Standard Time) -->
 1. [国庆的升旗仪式有多震撼](https://so.toutiao.com/search?keyword=国庆的升旗仪式有多震撼)
 1. [中国队首次包揽亚运男女百米冠军](https://so.toutiao.com/search?keyword=中国队首次包揽亚运男女百米冠军)
-1. [长假里的坚守](https://so.toutiao.com/search?keyword=长假里的坚守)
-1. [丈夫去世女子带女儿陪公婆过节](https://so.toutiao.com/search?keyword=丈夫去世女子带女儿陪公婆过节)
-1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
-1. [天安门升旗仪式70多年有哪些变化](https://so.toutiao.com/search?keyword=天安门升旗仪式70多年有哪些变化)
+1. [“中国速度”钱塘江畔立潮头](https://so.toutiao.com/search?keyword=“中国速度”钱塘江畔立潮头)
 1. [张伟丽把300多斤的奥尼尔一把抱起](https://so.toutiao.com/search?keyword=张伟丽把300多斤的奥尼尔一把抱起)
-1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
-1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
-1. [苏炳添看到葛曼棋夺冠激动落泪](https://so.toutiao.com/search?keyword=苏炳添看到葛曼棋夺冠激动落泪)
-1. [38岁“中国巴菲特”关善祥逝世](https://so.toutiao.com/search?keyword=38岁“中国巴菲特”关善祥逝世)
-1. [媒体：台湾的命运到了新的十字路口](https://so.toutiao.com/search?keyword=媒体：台湾的命运到了新的十字路口)
-1. [鲍珊菊谈亚运夺金感受一度哽咽](https://so.toutiao.com/search?keyword=鲍珊菊谈亚运夺金感受一度哽咽)
-1. [全红婵哥哥赶到比赛现场支持妹妹](https://so.toutiao.com/search?keyword=全红婵哥哥赶到比赛现场支持妹妹)
-1. [谢震业夺冠 父亲激动搓手母亲小跑](https://so.toutiao.com/search?keyword=谢震业夺冠+父亲激动搓手母亲小跑)
-1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
-1. [王楚钦孙颖莎看待混双角度发生变化](https://so.toutiao.com/search?keyword=王楚钦孙颖莎看待混双角度发生变化)
-1. [陈冠锋以这种方式致敬苏炳添](https://so.toutiao.com/search?keyword=陈冠锋以这种方式致敬苏炳添)
-1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
+1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
 1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
+1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
+1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
+1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
+1. [南京胖哥女儿因病去世](https://so.toutiao.com/search?keyword=南京胖哥女儿因病去世)
+1. [38岁“中国巴菲特”关善祥离世](https://so.toutiao.com/search?keyword=38岁“中国巴菲特”关善祥离世)
+1. [钱江潮今明两日已关闭网络预约通道](https://so.toutiao.com/search?keyword=钱江潮今明两日已关闭网络预约通道)
+1. [长沙再现拉链式人墙](https://so.toutiao.com/search?keyword=长沙再现拉链式人墙)
+1. [鲍珊菊谈亚运夺金感受一度哽咽](https://so.toutiao.com/search?keyword=鲍珊菊谈亚运夺金感受一度哽咽)
+1. [万羽和平鸽翱翔天安门上空](https://so.toutiao.com/search?keyword=万羽和平鸽翱翔天安门上空)
+1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
+1. [老人患阿尔兹海默53岁儿子一旁撒娇](https://so.toutiao.com/search?keyword=老人患阿尔兹海默53岁儿子一旁撒娇)
+1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
+1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
+1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
 1. [链球选手砸中裁判现场画面曝光](https://so.toutiao.com/search?keyword=链球选手砸中裁判现场画面曝光)
 1. [曝兰州某中学校长和老师围殴学生](https://so.toutiao.com/search?keyword=曝兰州某中学校长和老师围殴学生)
 1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
-1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
-1. [西藏堵车有多震撼](https://so.toutiao.com/search?keyword=西藏堵车有多震撼)
+1. [十一假期主题旅游打卡地推荐](https://so.toutiao.com/search?keyword=十一假期主题旅游打卡地推荐)
+1. [《坚如磐石》中隐藏的细节](https://so.toutiao.com/search?keyword=《坚如磐石》中隐藏的细节)
+1. [《中国梦·家国情》今晚播出](https://so.toutiao.com/search?keyword=《中国梦·家国情》今晚播出)
 1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
-1. [养老金超5000元需缴纳个人所得税吗](https://so.toutiao.com/search?keyword=养老金超5000元需缴纳个人所得税吗)
-1. [男子看店遭陌生女子骚扰后当场报警](https://so.toutiao.com/search?keyword=男子看店遭陌生女子骚扰后当场报警)
-1. [南京胖哥女儿因病去世](https://so.toutiao.com/search?keyword=南京胖哥女儿因病去世)
+1. [婚车偶遇2位新娘探出车窗互送喜糖](https://so.toutiao.com/search?keyword=婚车偶遇2位新娘探出车窗互送喜糖)
 1. [江西警号086211重启](https://so.toutiao.com/search?keyword=江西警号086211重启)
-1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
-1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
-1. [亚运今日看点：男足迎中韩大战](https://so.toutiao.com/search?keyword=亚运今日看点：男足迎中韩大战)
+1. [前鲁能国脚宋黎辉回应开网约车](https://so.toutiao.com/search?keyword=前鲁能国脚宋黎辉回应开网约车)
+1. [拜登发文回应美政府再“续命”45天](https://so.toutiao.com/search?keyword=拜登发文回应美政府再“续命”45天)
+1. [印度乒乓全队如夺冠般庆祝](https://so.toutiao.com/search?keyword=印度乒乓全队如夺冠般庆祝)
 1. [隧道堵车堵出一场演唱会](https://so.toutiao.com/search?keyword=隧道堵车堵出一场演唱会)
+1. [男子看店遭陌生女子骚扰后当场报警](https://so.toutiao.com/search?keyword=男子看店遭陌生女子骚扰后当场报警)
+1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
+1. [养老金超5000元需缴纳个人所得税吗](https://so.toutiao.com/search?keyword=养老金超5000元需缴纳个人所得税吗)
+1. [俄称摧毁乌弹药库 乌称击退俄进攻](https://so.toutiao.com/search?keyword=俄称摧毁乌弹药库+乌称击退俄进攻)
+1. [香港国庆升旗：方队中式步操入场](https://so.toutiao.com/search?keyword=香港国庆升旗：方队中式步操入场)
+1. [朝鲜举重队刷新5项世界纪录](https://so.toutiao.com/search?keyword=朝鲜举重队刷新5项世界纪录)
+1. [国庆机票价格为何突然跳水](https://so.toutiao.com/search?keyword=国庆机票价格为何突然跳水)
+1. [被一分为三的瓦格纳将如何重获新生](https://so.toutiao.com/search?keyword=被一分为三的瓦格纳将如何重获新生)
+1. [劳塔罗大四喜 国米4-0萨勒尼塔纳](https://so.toutiao.com/search?keyword=劳塔罗大四喜+国米4-0萨勒尼塔纳)
+1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
+1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
+1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
+1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
+1. [子弟兵在战位表白祖国](https://so.toutiao.com/search?keyword=子弟兵在战位表白祖国)
+1. [被五彩斑斓丰收景色美到了](https://so.toutiao.com/search?keyword=被五彩斑斓丰收景色美到了)
+1. [抖音的“公主请上车”是什么梗](https://so.toutiao.com/search?keyword=抖音的“公主请上车”是什么梗)
+1. [这些与国旗同框的画面看得热泪盈眶](https://so.toutiao.com/search?keyword=这些与国旗同框的画面看得热泪盈眶)
+1. [长假里的坚守](https://so.toutiao.com/search?keyword=长假里的坚守)
+1. [丈夫去世女子带女儿陪公婆过节](https://so.toutiao.com/search?keyword=丈夫去世女子带女儿陪公婆过节)
+1. [天安门升旗仪式70多年有哪些变化](https://so.toutiao.com/search?keyword=天安门升旗仪式70多年有哪些变化)
+1. [苏炳添看到葛曼棋夺冠激动落泪](https://so.toutiao.com/search?keyword=苏炳添看到葛曼棋夺冠激动落泪)
+1. [38岁“中国巴菲特”关善祥逝世](https://so.toutiao.com/search?keyword=38岁“中国巴菲特”关善祥逝世)
+1. [媒体：台湾的命运到了新的十字路口](https://so.toutiao.com/search?keyword=媒体：台湾的命运到了新的十字路口)
+1. [全红婵哥哥赶到比赛现场支持妹妹](https://so.toutiao.com/search?keyword=全红婵哥哥赶到比赛现场支持妹妹)
+1. [谢震业夺冠 父亲激动搓手母亲小跑](https://so.toutiao.com/search?keyword=谢震业夺冠+父亲激动搓手母亲小跑)
+1. [王楚钦孙颖莎看待混双角度发生变化](https://so.toutiao.com/search?keyword=王楚钦孙颖莎看待混双角度发生变化)
+1. [陈冠锋以这种方式致敬苏炳添](https://so.toutiao.com/search?keyword=陈冠锋以这种方式致敬苏炳添)
+1. [西藏堵车有多震撼](https://so.toutiao.com/search?keyword=西藏堵车有多震撼)
+1. [亚运今日看点：男足迎中韩大战](https://so.toutiao.com/search?keyword=亚运今日看点：男足迎中韩大战)
 1. [台风“小犬”将向北偏西方向移动](https://so.toutiao.com/search?keyword=台风“小犬”将向北偏西方向移动)
 1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
-1. [国庆机票价格为何突然跳水](https://so.toutiao.com/search?keyword=国庆机票价格为何突然跳水)
 1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
-1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
-1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
 1. [亚运会小女孩升旗时高唱国歌](https://so.toutiao.com/search?keyword=亚运会小女孩升旗时高唱国歌)
-1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
 1. [中国经济景气水平回升](https://so.toutiao.com/search?keyword=中国经济景气水平回升)
 1. [女儿没买到票父母驱车170公里去接](https://so.toutiao.com/search?keyword=女儿没买到票父母驱车170公里去接)
 1. [基尔曼：能击败曼城令人难以置信](https://so.toutiao.com/search?keyword=基尔曼：能击败曼城令人难以置信)
 1. [国庆机票价格跳水 退票重订省5千多](https://so.toutiao.com/search?keyword=国庆机票价格跳水+退票重订省5千多)
 1. [巴林选手获亚运会男子10000米金牌](https://so.toutiao.com/search?keyword=巴林选手获亚运会男子10000米金牌)
-1. [子弟兵在战位表白祖国](https://so.toutiao.com/search?keyword=子弟兵在战位表白祖国)
 1. [《坚如磐石》最该看透的7个真相](https://so.toutiao.com/search?keyword=《坚如磐石》最该看透的7个真相)
 1. [美媒关注的项目被中国物理学家认领](https://so.toutiao.com/search?keyword=美媒关注的项目被中国物理学家认领)
 1. [国乒女双无缘奖牌](https://so.toutiao.com/search?keyword=国乒女双无缘奖牌)
