--- a/archives/toutiao-search/2023-10-01.md
+++ b/archives/toutiao-search/2023-10-01.md
@@ -1,58 +1,73 @@
 # 2023-10-01
 
-共 194 条
+共 207 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Oct 01 2023 14:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Oct 01 2023 15:01:02 GMT+0800 (China Standard Time) -->
 1. [国庆的升旗仪式有多震撼](https://so.toutiao.com/search?keyword=国庆的升旗仪式有多震撼)
 1. [中国队首次包揽亚运男女百米冠军](https://so.toutiao.com/search?keyword=中国队首次包揽亚运男女百米冠军)
 1. [“中国速度”钱塘江畔立潮头](https://so.toutiao.com/search?keyword=“中国速度”钱塘江畔立潮头)
-1. [国庆当天30余万人齐聚天安门](https://so.toutiao.com/search?keyword=国庆当天30余万人齐聚天安门)
+1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
+1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
+1. [杭州四季青火出圈引来奥尼尔](https://so.toutiao.com/search?keyword=杭州四季青火出圈引来奥尼尔)
 1. [谢震业9秒97成为亚洲新“飞人”](https://so.toutiao.com/search?keyword=谢震业9秒97成为亚洲新“飞人”)
 1. [南京胖哥女儿因病去世](https://so.toutiao.com/search?keyword=南京胖哥女儿因病去世)
-1. [新华社特写：给张本智和的掌声](https://so.toutiao.com/search?keyword=新华社特写：给张本智和的掌声)
-1. [奥尼尔抱萌娃合影 娃表情亮了](https://so.toutiao.com/search?keyword=奥尼尔抱萌娃合影+娃表情亮了)
 1. [华为工作人员辟谣中秋送Mate60](https://so.toutiao.com/search?keyword=华为工作人员辟谣中秋送Mate60)
-1. [孟晚舟掌舵华为期间都做了什么](https://so.toutiao.com/search?keyword=孟晚舟掌舵华为期间都做了什么)
-1. [俞敏洪带你云游西藏纳木错](https://so.toutiao.com/search?keyword=俞敏洪带你云游西藏纳木错)
-1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
-1. [奥尼尔说感谢杭州](https://so.toutiao.com/search?keyword=奥尼尔说感谢杭州)
+1. [新华社特写：给张本智和的掌声](https://so.toutiao.com/search?keyword=新华社特写：给张本智和的掌声)
+1. [景区吃饭前面排645桌](https://so.toutiao.com/search?keyword=景区吃饭前面排645桌)
 1. [张伟丽把300多斤的奥尼尔一把抱起](https://so.toutiao.com/search?keyword=张伟丽把300多斤的奥尼尔一把抱起)
+1. [《坚如磐石》开分6.7](https://so.toutiao.com/search?keyword=《坚如磐石》开分6.7)
 1. [购房补贴多少钱能够激励你买房](https://so.toutiao.com/search?keyword=购房补贴多少钱能够激励你买房)
-1. [尿急跳下高架桥男子无生命危险](https://so.toutiao.com/search?keyword=尿急跳下高架桥男子无生命危险)
 1. [游客爬长城3分钟走2步](https://so.toutiao.com/search?keyword=游客爬长城3分钟走2步)
-1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
-1. [京哈高速约50辆车被扎胎](https://so.toutiao.com/search?keyword=京哈高速约50辆车被扎胎)
+1. [女孩租房一年反复过敏发现床垫发霉](https://so.toutiao.com/search?keyword=女孩租房一年反复过敏发现床垫发霉)
 1. [媒体：美国政府在关门边缘紧急刹车](https://so.toutiao.com/search?keyword=媒体：美国政府在关门边缘紧急刹车)
+1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
+1. [京哈高速约50辆车被扎胎](https://so.toutiao.com/search?keyword=京哈高速约50辆车被扎胎)
+1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
 1. [链球选手砸中裁判现场画面曝光](https://so.toutiao.com/search?keyword=链球选手砸中裁判现场画面曝光)
 1. [曝兰州某中学校长和老师围殴学生](https://so.toutiao.com/search?keyword=曝兰州某中学校长和老师围殴学生)
+1. [中国队夺射击女子多向飞碟团体金牌](https://so.toutiao.com/search?keyword=中国队夺射击女子多向飞碟团体金牌)
+1. [新款特斯拉Model Y上市 26.39万起](https://so.toutiao.com/search?keyword=新款特斯拉Model+Y上市 26.39万起)
+1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
+1. [国庆档新片票房破11亿](https://so.toutiao.com/search?keyword=国庆档新片票房破11亿)
+1. [奥尼尔抱萌娃合影 娃表情亮了](https://so.toutiao.com/search?keyword=奥尼尔抱萌娃合影+娃表情亮了)
+1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
+1. [超级老声大龄选手国庆集体送祝福](https://so.toutiao.com/search?keyword=超级老声大龄选手国庆集体送祝福)
+1. [贾一凡遗憾落泪：没法每场都稳赢](https://so.toutiao.com/search?keyword=贾一凡遗憾落泪：没法每场都稳赢)
+1. [国庆假期一派出所对外开放停车](https://so.toutiao.com/search?keyword=国庆假期一派出所对外开放停车)
+1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
+1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
+1. [俄媒：泽连斯基计划“冒险行动”](https://so.toutiao.com/search?keyword=俄媒：泽连斯基计划“冒险行动”)
+1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
+1. [超级黄金周变局：中国游客去哪了](https://so.toutiao.com/search?keyword=超级黄金周变局：中国游客去哪了)
+1. [萌娃一边喂锦鲤一边摸鱼头](https://so.toutiao.com/search?keyword=萌娃一边喂锦鲤一边摸鱼头)
+1. [公安部：确保人民群众安心度过双节](https://so.toutiao.com/search?keyword=公安部：确保人民群众安心度过双节)
+1. [乌克兰一输油管道破裂并引发火灾](https://so.toutiao.com/search?keyword=乌克兰一输油管道破裂并引发火灾)
+1. [江西警号086211重启](https://so.toutiao.com/search?keyword=江西警号086211重启)
+1. [官兵们用吊车升起国旗](https://so.toutiao.com/search?keyword=官兵们用吊车升起国旗)
+1. [理想汽车9月交付36060辆](https://so.toutiao.com/search?keyword=理想汽车9月交付36060辆)
+1. [公安部：今年160余名民警因公牺牲](https://so.toutiao.com/search?keyword=公安部：今年160余名民警因公牺牲)
+1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
+1. [男子取完钱忘拔卡被女子取走4000元](https://so.toutiao.com/search?keyword=男子取完钱忘拔卡被女子取走4000元)
+1. [中国女排今日迎亚运首战](https://so.toutiao.com/search?keyword=中国女排今日迎亚运首战)
+1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
+1. [游客带国旗夜爬泰山](https://so.toutiao.com/search?keyword=游客带国旗夜爬泰山)
+1. [日本女足大胜菲律宾 将战中国女足](https://so.toutiao.com/search?keyword=日本女足大胜菲律宾+将战中国女足)
+1. [拜登称拿不出钱也要支持乌克兰](https://so.toutiao.com/search?keyword=拜登称拿不出钱也要支持乌克兰)
+1. [国庆当天30余万人齐聚天安门](https://so.toutiao.com/search?keyword=国庆当天30余万人齐聚天安门)
+1. [俞敏洪带你云游西藏纳木错](https://so.toutiao.com/search?keyword=俞敏洪带你云游西藏纳木错)
+1. [奥尼尔说感谢杭州](https://so.toutiao.com/search?keyword=奥尼尔说感谢杭州)
 1. [天安门广场人山人海直播间祝福刷屏](https://so.toutiao.com/search?keyword=天安门广场人山人海直播间祝福刷屏)
 1. [链球决赛被砸伤裁判生命体征平稳](https://so.toutiao.com/search?keyword=链球决赛被砸伤裁判生命体征平稳)
-1. [母亲打往天堂的电话今年被民警接起](https://so.toutiao.com/search?keyword=母亲打往天堂的电话今年被民警接起)
 1. [外国媳妇第一次看天安门升旗](https://so.toutiao.com/search?keyword=外国媳妇第一次看天安门升旗)
-1. [女孩租房一年反复过敏发现床垫发霉](https://so.toutiao.com/search?keyword=女孩租房一年反复过敏发现床垫发霉)
 1. [亚运男篮赛场奏响两次国歌](https://so.toutiao.com/search?keyword=亚运男篮赛场奏响两次国歌)
-1. [国庆档新片票房破11亿](https://so.toutiao.com/search?keyword=国庆档新片票房破11亿)
 1. [长沙再现拉链式人墙](https://so.toutiao.com/search?keyword=长沙再现拉链式人墙)
-1. [兵马俑快被挤到没地方站了](https://so.toutiao.com/search?keyword=兵马俑快被挤到没地方站了)
-1. [坚如磐石于和伟吓到观众不敢吃火锅](https://so.toutiao.com/search?keyword=坚如磐石于和伟吓到观众不敢吃火锅)
-1. [大学生付餐具费吃完饭将餐具带走](https://so.toutiao.com/search?keyword=大学生付餐具费吃完饭将餐具带走)
-1. [景区吃饭前面排645桌](https://so.toutiao.com/search?keyword=景区吃饭前面排645桌)
-1. [拜登称拿不出钱也要支持乌克兰](https://so.toutiao.com/search?keyword=拜登称拿不出钱也要支持乌克兰)
-1. [女子进店不买东西上来就抱男店主](https://so.toutiao.com/search?keyword=女子进店不买东西上来就抱男店主)
 1. [美媒关注的项目被中国物理学家认领](https://so.toutiao.com/search?keyword=美媒关注的项目被中国物理学家认领)
-1. [坐在高铁上看高速堵车](https://so.toutiao.com/search?keyword=坐在高铁上看高速堵车)
 1. [什么是马凡氏综合征](https://so.toutiao.com/search?keyword=什么是马凡氏综合征)
-1. [国庆假期一派出所对外开放停车](https://so.toutiao.com/search?keyword=国庆假期一派出所对外开放停车)
 1. [中国短跑努力跑出新老交替阵痛期](https://so.toutiao.com/search?keyword=中国短跑努力跑出新老交替阵痛期)
-1. [《坚如磐石》连续2天单日票房破亿](https://so.toutiao.com/search?keyword=《坚如磐石》连续2天单日票房破亿)
-1. [乌克兰一周内经历四次“外交噩梦”](https://so.toutiao.com/search?keyword=乌克兰一周内经历四次“外交噩梦”)
-1. [江西警号086211重启](https://so.toutiao.com/search?keyword=江西警号086211重启)
 1. [警方回应两女生宿舍内被迫互扇耳光](https://so.toutiao.com/search?keyword=警方回应两女生宿舍内被迫互扇耳光)
 1. [《好事成双》黄嘉仪意外怀孕](https://so.toutiao.com/search?keyword=《好事成双》黄嘉仪意外怀孕)
-1. [理想汽车9月交付36060辆](https://so.toutiao.com/search?keyword=理想汽车9月交付36060辆)
 1. [海关查获“大白菜”为砗磲制品](https://so.toutiao.com/search?keyword=海关查获“大白菜”为砗磲制品)
-1. [武功山“拍照局长”给游客指导动作](https://so.toutiao.com/search?keyword=武功山“拍照局长”给游客指导动作)
 1. [男子高铁站强闯闸机被警方处罚](https://so.toutiao.com/search?keyword=男子高铁站强闯闸机被警方处罚)
 1. [美参议院投票通过45天短期支出法案](https://so.toutiao.com/search?keyword=美参议院投票通过45天短期支出法案)
 1. [38岁“中国巴菲特”关善祥离世](https://so.toutiao.com/search?keyword=38岁“中国巴菲特”关善祥离世)
@@ -71,7 +86,6 @@
 1. [郁豹豹回到山西老家弟弟为他穿新鞋](https://so.toutiao.com/search?keyword=郁豹豹回到山西老家弟弟为他穿新鞋)
 1. [人民日报：只要努力 结果不会差](https://so.toutiao.com/search?keyword=人民日报：只要努力+结果不会差)
 1. [武警部队全力做好“双节”执勤安保](https://so.toutiao.com/search?keyword=武警部队全力做好“双节”执勤安保)
-1. [萌娃一边喂锦鲤一边摸鱼头](https://so.toutiao.com/search?keyword=萌娃一边喂锦鲤一边摸鱼头)
 1. [钱江潮今明两日已关闭网络预约通道](https://so.toutiao.com/search?keyword=钱江潮今明两日已关闭网络预约通道)
 1. [鲍珊菊谈亚运夺金感受一度哽咽](https://so.toutiao.com/search?keyword=鲍珊菊谈亚运夺金感受一度哽咽)
 1. [万羽和平鸽翱翔天安门上空](https://so.toutiao.com/search?keyword=万羽和平鸽翱翔天安门上空)
@@ -181,7 +195,6 @@
 1. [应急管理部批准梁殊铜同志为烈士](https://so.toutiao.com/search?keyword=应急管理部批准梁殊铜同志为烈士)
 1. [统计局解读9月中国采购经理指数](https://so.toutiao.com/search?keyword=统计局解读9月中国采购经理指数)
 1. [《前任4》柳柳的遗憾看哭了](https://so.toutiao.com/search?keyword=《前任4》柳柳的遗憾看哭了)
-1. [公安部：今年160余名民警因公牺牲](https://so.toutiao.com/search?keyword=公安部：今年160余名民警因公牺牲)
 1. [球迷拍到前鲁能国脚宋黎辉开网约车](https://so.toutiao.com/search?keyword=球迷拍到前鲁能国脚宋黎辉开网约车)
 1. [俄媒：乌军准备夺取扎波罗热核电站](https://so.toutiao.com/search?keyword=俄媒：乌军准备夺取扎波罗热核电站)
 1. [广西两层楼房坍塌致4人受伤](https://so.toutiao.com/search?keyword=广西两层楼房坍塌致4人受伤)
