--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,50 +1,70 @@
 # 2023-10-04
 
-共 96 条
+共 115 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 07:00:40 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 04 2023 08:24:26 GMT+0800 (China Standard Time) -->
 1. [全红婵完美一跳裁判全给10分](https://so.toutiao.com/search?keyword=全红婵完美一跳裁判全给10分)
-1. [女子举报100多台车走应急道引争议](https://so.toutiao.com/search?keyword=女子举报100多台车走应急道引争议)
+1. [中国队夺得男子4×100米接力冠军](https://so.toutiao.com/search?keyword=中国队夺得男子4×100米接力冠军)
 1. [带着11位布依族妈妈到北京看升国旗](https://so.toutiao.com/search?keyword=带着11位布依族妈妈到北京看升国旗)
 1. [全红婵力压陈芋汐摘金](https://so.toutiao.com/search?keyword=全红婵力压陈芋汐摘金)
-1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
+1. [美众议院投票罢免麦卡锡议长职务](https://so.toutiao.com/search?keyword=美众议院投票罢免麦卡锡议长职务)
 1. [中国女足3-4不敌日本无缘决赛](https://so.toutiao.com/search?keyword=中国女足3-4不敌日本无缘决赛)
-1. [全红婵夺冠后比心感谢观众](https://so.toutiao.com/search?keyword=全红婵夺冠后比心感谢观众)
+1. [全红婵7个10分截图打卡](https://so.toutiao.com/search?keyword=全红婵7个10分截图打卡)
+1. [女子举报100多台车走应急道引争议](https://so.toutiao.com/search?keyword=女子举报100多台车走应急道引争议)
 1. [英国为何宣布向乌派兵又“撤回”](https://so.toutiao.com/search?keyword=英国为何宣布向乌派兵又“撤回”)
-1. [马斯克发图嘲讽泽连斯基](https://so.toutiao.com/search?keyword=马斯克发图嘲讽泽连斯基)
-1. [媒体：扩大化举报让老师选择躺平](https://so.toutiao.com/search?keyword=媒体：扩大化举报让老师选择躺平)
-1. [恒大复牌大涨是利空出尽了吗](https://so.toutiao.com/search?keyword=恒大复牌大涨是利空出尽了吗)
-1. [成都辟谣养老机构老人深夜被打](https://so.toutiao.com/search?keyword=成都辟谣养老机构老人深夜被打)
+1. [警方通报婚车与环卫车相撞：致6死](https://so.toutiao.com/search?keyword=警方通报婚车与环卫车相撞：致6死)
 1. [原来郑少秋有3段感情4个女儿](https://so.toutiao.com/search?keyword=原来郑少秋有3段感情4个女儿)
+1. [成都辟谣养老机构老人深夜被打](https://so.toutiao.com/search?keyword=成都辟谣养老机构老人深夜被打)
 1. [日本女足赛后鞠躬致敬水庆霞](https://so.toutiao.com/search?keyword=日本女足赛后鞠躬致敬水庆霞)
-1. [张馨予回应带火广西打卡地](https://so.toutiao.com/search?keyword=张馨予回应带火广西打卡地)
+1. [恒大复牌大涨是利空出尽了吗](https://so.toutiao.com/search?keyword=恒大复牌大涨是利空出尽了吗)
+1. [借名买的房归谁](https://so.toutiao.com/search?keyword=借名买的房归谁)
+1. [全红婵礼貌让前面的记者先问](https://so.toutiao.com/search?keyword=全红婵礼貌让前面的记者先问)
+1. [体坛：中国女足与日本差距让人绝望](https://so.toutiao.com/search?keyword=体坛：中国女足与日本差距让人绝望)
 1. [特朗普又出庭应诉 午餐吃麦当劳](https://so.toutiao.com/search?keyword=特朗普又出庭应诉+午餐吃麦当劳)
-1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
-1. [媒体评一座山被张馨予打卡后走红](https://so.toutiao.com/search?keyword=媒体评一座山被张馨予打卡后走红)
-1. [安徽一辆商务车追尾拖拉机致3死](https://so.toutiao.com/search?keyword=安徽一辆商务车追尾拖拉机致3死)
-1. [老人因大虾被碾压趴车不让走遭顶撞](https://so.toutiao.com/search?keyword=老人因大虾被碾压趴车不让走遭顶撞)
-1. [国庆档电影票房究竟被什么影响了](https://so.toutiao.com/search?keyword=国庆档电影票房究竟被什么影响了)
+1. [亚运会赛场响起奢香夫人](https://so.toutiao.com/search?keyword=亚运会赛场响起奢香夫人)
+1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
+1. [举报高速违章1分钟赚3千？警方回应](https://so.toutiao.com/search?keyword=举报高速违章1分钟赚3千？警方回应)
 1. [众星亮相巴黎时装周 杨紫变瘦变美](https://so.toutiao.com/search?keyword=众星亮相巴黎时装周+杨紫变瘦变美)
-1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
-1. [媒体：收贪官父亲钱的女儿有没有罪](https://so.toutiao.com/search?keyword=媒体：收贪官父亲钱的女儿有没有罪)
-1. [布林肯对华国庆祝贺新增2个关键词](https://so.toutiao.com/search?keyword=布林肯对华国庆祝贺新增2个关键词)
-1. [英军两艘航母出动 战力却遭质疑](https://so.toutiao.com/search?keyword=英军两艘航母出动+战力却遭质疑)
+1. [马斯克发图嘲讽泽连斯基](https://so.toutiao.com/search?keyword=马斯克发图嘲讽泽连斯基)
+1. [亚运会4日金牌赛程：中国多线冲金](https://so.toutiao.com/search?keyword=亚运会4日金牌赛程：中国多线冲金)
+1. [假期司机未减速进收费站撞断栏杆](https://so.toutiao.com/search?keyword=假期司机未减速进收费站撞断栏杆)
+1. [孙启豪夺得男子十项全能冠军](https://so.toutiao.com/search?keyword=孙启豪夺得男子十项全能冠军)
+1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
+1. [两车轻微剐蹭致堵车 路过司机怒怼](https://so.toutiao.com/search?keyword=两车轻微剐蹭致堵车+路过司机怒怼)
+1. [全红婵粉丝带着小乌龟观赛](https://so.toutiao.com/search?keyword=全红婵粉丝带着小乌龟观赛)
+1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
+1. [张馨予回应带火广西打卡地](https://so.toutiao.com/search?keyword=张馨予回应带火广西打卡地)
 1. [邹凯说退役后还在寻找新目标](https://so.toutiao.com/search?keyword=邹凯说退役后还在寻找新目标)
+1. [安徽一辆商务车追尾拖拉机致3死](https://so.toutiao.com/search?keyword=安徽一辆商务车追尾拖拉机致3死)
+1. [媒体评一座山被张馨予打卡后走红](https://so.toutiao.com/search?keyword=媒体评一座山被张馨予打卡后走红)
 1. [屠呦呦后8年诺奖再次颁给女科学家](https://so.toutiao.com/search?keyword=屠呦呦后8年诺奖再次颁给女科学家)
+1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
+1. [吴京谢楠儿子是王楚钦迷弟](https://so.toutiao.com/search?keyword=吴京谢楠儿子是王楚钦迷弟)
+1. [媒体：收贪官父亲钱的女儿有没有罪](https://so.toutiao.com/search?keyword=媒体：收贪官父亲钱的女儿有没有罪)
+1. [新郎结婚时被锁上铁链 目击者发声](https://so.toutiao.com/search?keyword=新郎结婚时被锁上铁链+目击者发声)
+1. [布林肯对华国庆祝贺新增2个关键词](https://so.toutiao.com/search?keyword=布林肯对华国庆祝贺新增2个关键词)
+1. [屡被中央督察点名地假期迎省级暗访](https://so.toutiao.com/search?keyword=屡被中央督察点名地假期迎省级暗访)
+1. [女子称装修工在自家地板就地大小便](https://so.toutiao.com/search?keyword=女子称装修工在自家地板就地大小便)
+1. [谢震业为队友点播《年轻的战场》](https://so.toutiao.com/search?keyword=谢震业为队友点播《年轻的战场》)
+1. [老人因大虾被碾压趴车不让走遭顶撞](https://so.toutiao.com/search?keyword=老人因大虾被碾压趴车不让走遭顶撞)
+1. [环卫工人把垃圾倒入海中被开除](https://so.toutiao.com/search?keyword=环卫工人把垃圾倒入海中被开除)
+1. [德方称将派4000德军永久驻扎立陶宛](https://so.toutiao.com/search?keyword=德方称将派4000德军永久驻扎立陶宛)
+1. [媒体：扩大化举报让老师选择躺平](https://so.toutiao.com/search?keyword=媒体：扩大化举报让老师选择躺平)
+1. [港珠澳大桥单日旅客破10万人次](https://so.toutiao.com/search?keyword=港珠澳大桥单日旅客破10万人次)
+1. [驻泰使馆：受害中国公民身份已查明](https://so.toutiao.com/search?keyword=驻泰使馆：受害中国公民身份已查明)
+1. [网红乌啦啦在天津吃了4斤包子](https://so.toutiao.com/search?keyword=网红乌啦啦在天津吃了4斤包子)
+1. [全红婵夺冠后比心感谢观众](https://so.toutiao.com/search?keyword=全红婵夺冠后比心感谢观众)
+1. [国庆档电影票房究竟被什么影响了](https://so.toutiao.com/search?keyword=国庆档电影票房究竟被什么影响了)
+1. [英军两艘航母出动 战力却遭质疑](https://so.toutiao.com/search?keyword=英军两艘航母出动+战力却遭质疑)
 1. [国内金饰跌破600元/克](https://so.toutiao.com/search?keyword=国内金饰跌破600元/克)
 1. [双节“反向旅游”成新潮流](https://so.toutiao.com/search?keyword=双节“反向旅游”成新潮流)
-1. [新郎结婚时被锁上铁链 目击者发声](https://so.toutiao.com/search?keyword=新郎结婚时被锁上铁链+目击者发声)
 1. [专家：瓦格纳人员或重返冲突前线](https://so.toutiao.com/search?keyword=专家：瓦格纳人员或重返冲突前线)
-1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
 1. [链球冠军王琦返乡获奖励10万](https://so.toutiao.com/search?keyword=链球冠军王琦返乡获奖励10万)
-1. [环卫工人把垃圾倒入海中被开除](https://so.toutiao.com/search?keyword=环卫工人把垃圾倒入海中被开除)
-1. [女子称装修工在自家地板就地大小便](https://so.toutiao.com/search?keyword=女子称装修工在自家地板就地大小便)
 1. [OPPO Find N3折叠屏手机规格曝光](https://so.toutiao.com/search?keyword=OPPO+Find N3折叠屏手机规格曝光)
 1. [林雨薇：戴发带能遮挡发际线](https://so.toutiao.com/search?keyword=林雨薇：戴发带能遮挡发际线)
 1. [广汽本田公布9月份销量快报](https://so.toutiao.com/search?keyword=广汽本田公布9月份销量快报)
 1. [研招网回应女生误拒浙大保研通知](https://so.toutiao.com/search?keyword=研招网回应女生误拒浙大保研通知)
-1. [港珠澳大桥单日旅客破10万人次](https://so.toutiao.com/search?keyword=港珠澳大桥单日旅客破10万人次)
 1. [媒体评中科院博士辞职开民宿](https://so.toutiao.com/search?keyword=媒体评中科院博士辞职开民宿)
 1. [美媒警告：美国经济面临多重危机](https://so.toutiao.com/search?keyword=美媒警告：美国经济面临多重危机)
 1. [港珠澳大桥单日出入境车辆数破纪录](https://so.toutiao.com/search?keyword=港珠澳大桥单日出入境车辆数破纪录)
@@ -75,7 +95,6 @@
 1. [土耳其政府拘留20名涉恐嫌疑人](https://so.toutiao.com/search?keyword=土耳其政府拘留20名涉恐嫌疑人)
 1. [台名嘴：大陆消费力复苏](https://so.toutiao.com/search?keyword=台名嘴：大陆消费力复苏)
 1. [张雨霏两个月拿下20枚奖牌](https://so.toutiao.com/search?keyword=张雨霏两个月拿下20枚奖牌)
-1. [中国队夺得男子4×100米接力冠军](https://so.toutiao.com/search?keyword=中国队夺得男子4×100米接力冠军)
 1. [泽连斯基与西班牙桑切斯首相通话](https://so.toutiao.com/search?keyword=泽连斯基与西班牙桑切斯首相通话)
 1. [泽连斯基与意大利外长举行会谈](https://so.toutiao.com/search?keyword=泽连斯基与意大利外长举行会谈)
 1. [餐厅服务员将剩茶倒回茶水桶](https://so.toutiao.com/search?keyword=餐厅服务员将剩茶倒回茶水桶)
