--- a/archives/toutiao-search/2023-10-06.md
+++ b/archives/toutiao-search/2023-10-06.md
@@ -1,55 +1,74 @@
 # 2023-10-06
 
-共 318 条
+共 330 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Fri Oct 06 2023 22:00:48 GMT+0800 (China Standard Time) -->
-1. [12306回应乘客买短补长滞留站台](https://so.toutiao.com/search?keyword=12306回应乘客买短补长滞留站台)
-1. [记者探访上海4岁女童消失现场](https://so.toutiao.com/search?keyword=记者探访上海4岁女童消失现场)
-1. [亚运闭幕式剧透来了](https://so.toutiao.com/search?keyword=亚运闭幕式剧透来了)
-1. [蓝天救援队公布疑似女童走失前视频](https://so.toutiao.com/search?keyword=蓝天救援队公布疑似女童走失前视频)
-1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
-1. [上海女老师被骗400万 警方劝阻12次](https://so.toutiao.com/search?keyword=上海女老师被骗400万+警方劝阻12次)
+<!-- 最后更新时间 Fri Oct 06 2023 23:01:06 GMT+0800 (China Standard Time) -->
 1. [姚明：我知道你们叫我226](https://so.toutiao.com/search?keyword=姚明：我知道你们叫我226)
+1. [高速堵车警察派无人机通知打火通行](https://so.toutiao.com/search?keyword=高速堵车警察派无人机通知打火通行)
+1. [亚运闭幕式剧透来了](https://so.toutiao.com/search?keyword=亚运闭幕式剧透来了)
+1. [记者探访上海4岁女童消失现场](https://so.toutiao.com/search?keyword=记者探访上海4岁女童消失现场)
 1. [叙利亚军事学院遇袭已致112死240伤](https://so.toutiao.com/search?keyword=叙利亚军事学院遇袭已致112死240伤)
+1. [巴西男子施暴女子将人强行拖出电梯](https://so.toutiao.com/search?keyword=巴西男子施暴女子将人强行拖出电梯)
+1. [官方回应多人穿练功服遭轮流抽脸](https://so.toutiao.com/search?keyword=官方回应多人穿练功服遭轮流抽脸)
+1. [国际金价9个交易日连跌](https://so.toutiao.com/search?keyword=国际金价9个交易日连跌)
 1. [仰头玩手机可以预防颈椎病？不实](https://so.toutiao.com/search?keyword=仰头玩手机可以预防颈椎病？不实)
-1. [还没从于和伟的“嘘”里走出来](https://so.toutiao.com/search?keyword=还没从于和伟的“嘘”里走出来)
+1. [官方通报女子陪领导喝酒醉卧街头](https://so.toutiao.com/search?keyword=官方通报女子陪领导喝酒醉卧街头)
 1. [搜救队员：女童走失地附近有滩涂](https://so.toutiao.com/search?keyword=搜救队员：女童走失地附近有滩涂)
 1. [4车相撞1人身亡 全责车记录仪坏了](https://so.toutiao.com/search?keyword=4车相撞1人身亡+全责车记录仪坏了)
-1. [金世佳被娃求抱承认是自己儿子](https://so.toutiao.com/search?keyword=金世佳被娃求抱承认是自己儿子)
-1. [海滩走失女童母亲：已扩大搜索范围](https://so.toutiao.com/search?keyword=海滩走失女童母亲：已扩大搜索范围)
-1. [两间房均有摄像头 顾客酒店齐报警](https://so.toutiao.com/search?keyword=两间房均有摄像头+顾客酒店齐报警)
-1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
-1. [上海4岁女童海滩走失已超48小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超48小时)
-1. [官方回应多人穿练功服遭轮流抽脸](https://so.toutiao.com/search?keyword=官方回应多人穿练功服遭轮流抽脸)
-1. [住酒店发现摄像头：嫌疑人已被抓获](https://so.toutiao.com/search?keyword=住酒店发现摄像头：嫌疑人已被抓获)
+1. [蓝天救援队公布疑似女童走失前视频](https://so.toutiao.com/search?keyword=蓝天救援队公布疑似女童走失前视频)
 1. [走失女童疑似曾原地等候约10分钟](https://so.toutiao.com/search?keyword=走失女童疑似曾原地等候约10分钟)
+1. [两间房均有摄像头 顾客酒店齐报警](https://so.toutiao.com/search?keyword=两间房均有摄像头+顾客酒店齐报警)
+1. [假期中国多项旅游数据超疫情前水平](https://so.toutiao.com/search?keyword=假期中国多项旅游数据超疫情前水平)
+1. [上海4岁女童海滩走失已超48小时](https://so.toutiao.com/search?keyword=上海4岁女童海滩走失已超48小时)
+1. [西安对彩虹星球公司正式立案调查](https://so.toutiao.com/search?keyword=西安对彩虹星球公司正式立案调查)
+1. [金世佳被娃求抱承认是自己儿子](https://so.toutiao.com/search?keyword=金世佳被娃求抱承认是自己儿子)
+1. [走失女童父亲事发时曾去取手机](https://so.toutiao.com/search?keyword=走失女童父亲事发时曾去取手机)
 1. [两干部流出不雅视频被停职](https://so.toutiao.com/search?keyword=两干部流出不雅视频被停职)
 1. [官方通报幼儿园园长与无业男子开房](https://so.toutiao.com/search?keyword=官方通报幼儿园园长与无业男子开房)
-1. [走失女童父亲事发时曾去取手机](https://so.toutiao.com/search?keyword=走失女童父亲事发时曾去取手机)
+1. [上海女老师被骗400万 警方劝阻12次](https://so.toutiao.com/search?keyword=上海女老师被骗400万+警方劝阻12次)
+1. [老师订10余套演出服用完立马退货](https://so.toutiao.com/search?keyword=老师订10余套演出服用完立马退货)
+1. [住酒店发现摄像头：嫌疑人已被抓获](https://so.toutiao.com/search?keyword=住酒店发现摄像头：嫌疑人已被抓获)
+1. [券商人士否认A股将调整交易时间](https://so.toutiao.com/search?keyword=券商人士否认A股将调整交易时间)
+1. [水庆霞欣喜女足新人获得成长](https://so.toutiao.com/search?keyword=水庆霞欣喜女足新人获得成长)
+1. [美媒：美国或在2024年出现经济崩盘](https://so.toutiao.com/search?keyword=美媒：美国或在2024年出现经济崩盘)
+1. [丰田章男称日本电动汽车技术不落后](https://so.toutiao.com/search?keyword=丰田章男称日本电动汽车技术不落后)
+1. [男子买羊腿送领导 打开却是大棒骨](https://so.toutiao.com/search?keyword=男子买羊腿送领导+打开却是大棒骨)
+1. [直击假期返程高峰](https://so.toutiao.com/search?keyword=直击假期返程高峰)
+1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
+1. [成品油有望迎来年内最大降幅](https://so.toutiao.com/search?keyword=成品油有望迎来年内最大降幅)
+1. [媒体：美国政坛乱成一锅粥了](https://so.toutiao.com/search?keyword=媒体：美国政坛乱成一锅粥了)
+1. [媒体评迷笛案后又见搬空婚礼场地](https://so.toutiao.com/search?keyword=媒体评迷笛案后又见搬空婚礼场地)
+1. [司机高速匝道停车致4车追尾](https://so.toutiao.com/search?keyword=司机高速匝道停车致4车追尾)
+1. [伊拉克央行：将禁止美元提现及交易](https://so.toutiao.com/search?keyword=伊拉克央行：将禁止美元提现及交易)
+1. [3个女儿国庆在家全是单身 爸爸愁坏](https://so.toutiao.com/search?keyword=3个女儿国庆在家全是单身+爸爸愁坏)
+1. [辽宁一公园穿练功服老人被狂扇耳光](https://so.toutiao.com/search?keyword=辽宁一公园穿练功服老人被狂扇耳光)
+1. [大妈偷榴莲后嫌不好 竟找老板退钱](https://so.toutiao.com/search?keyword=大妈偷榴莲后嫌不好+竟找老板退钱)
+1. [亚运团长霍启刚的一天](https://so.toutiao.com/search?keyword=亚运团长霍启刚的一天)
+1. [女子回应跨城找回手机：资料被清空](https://so.toutiao.com/search?keyword=女子回应跨城找回手机：资料被清空)
+1. [男子不慎砸头躲奶奶怀里哭](https://so.toutiao.com/search?keyword=男子不慎砸头躲奶奶怀里哭)
+1. [孩子参加父母的婚礼成主角](https://so.toutiao.com/search?keyword=孩子参加父母的婚礼成主角)
+1. [巴基斯坦旁遮普省发生大型爆炸事件](https://so.toutiao.com/search?keyword=巴基斯坦旁遮普省发生大型爆炸事件)
+1. [乔布斯逝世12周年 库克缅怀](https://so.toutiao.com/search?keyword=乔布斯逝世12周年+库克缅怀)
+1. [《他从火光中走来》有哪些泪目剧情](https://so.toutiao.com/search?keyword=《他从火光中走来》有哪些泪目剧情)
+1. [美国9月非农就业人数增加33.6万人](https://so.toutiao.com/search?keyword=美国9月非农就业人数增加33.6万人)
+1. [假期返程交通安全提示](https://so.toutiao.com/search?keyword=假期返程交通安全提示)
+1. [媒体：美高官假惺惺求中美两军对话](https://so.toutiao.com/search?keyword=媒体：美高官假惺惺求中美两军对话)
+1. [12306回应乘客买短补长滞留站台](https://so.toutiao.com/search?keyword=12306回应乘客买短补长滞留站台)
+1. [还没从于和伟的“嘘”里走出来](https://so.toutiao.com/search?keyword=还没从于和伟的“嘘”里走出来)
+1. [海滩走失女童母亲：已扩大搜索范围](https://so.toutiao.com/search?keyword=海滩走失女童母亲：已扩大搜索范围)
 1. [婚礼场地被村民连夜搬空](https://so.toutiao.com/search?keyword=婚礼场地被村民连夜搬空)
 1. [曝美国将敲定对华出口芯片管制新规](https://so.toutiao.com/search?keyword=曝美国将敲定对华出口芯片管制新规)
-1. [司机高速匝道停车致4车追尾](https://so.toutiao.com/search?keyword=司机高速匝道停车致4车追尾)
-1. [成品油有望迎来年内最大降幅](https://so.toutiao.com/search?keyword=成品油有望迎来年内最大降幅)
 1. [返程聪明人](https://so.toutiao.com/search?keyword=返程聪明人)
 1. [未来3天华南沿海地区有大风灾害](https://so.toutiao.com/search?keyword=未来3天华南沿海地区有大风灾害)
 1. [派出所回应婚礼场地被连夜搬空](https://so.toutiao.com/search?keyword=派出所回应婚礼场地被连夜搬空)
 1. [陈飞宇首次回应弄丢妖猫传的猫](https://so.toutiao.com/search?keyword=陈飞宇首次回应弄丢妖猫传的猫)
-1. [媒体：美国政坛乱成一锅粥了](https://so.toutiao.com/search?keyword=媒体：美国政坛乱成一锅粥了)
-1. [大妈偷榴莲后嫌不好 竟找老板退钱](https://so.toutiao.com/search?keyword=大妈偷榴莲后嫌不好+竟找老板退钱)
-1. [老师订10余套演出服用完立马退货](https://so.toutiao.com/search?keyword=老师订10余套演出服用完立马退货)
-1. [王仕鹏为不当言论道歉](https://so.toutiao.com/search?keyword=王仕鹏为不当言论道歉)
 1. [马术冠军华天感谢杭州观众](https://so.toutiao.com/search?keyword=马术冠军华天感谢杭州观众)
 1. [巴黎奥运会女篮资格赛分组出炉](https://so.toutiao.com/search?keyword=巴黎奥运会女篮资格赛分组出炉)
-1. [西安对彩虹星球公司正式立案调查](https://so.toutiao.com/search?keyword=西安对彩虹星球公司正式立案调查)
-1. [女子回应跨城找回手机：资料被清空](https://so.toutiao.com/search?keyword=女子回应跨城找回手机：资料被清空)
-1. [巴基斯坦旁遮普省发生大型爆炸事件](https://so.toutiao.com/search?keyword=巴基斯坦旁遮普省发生大型爆炸事件)
 1. [特斯拉部分车型在美降价](https://so.toutiao.com/search?keyword=特斯拉部分车型在美降价)
 1. [中秋国庆全国营业性演出票房超20亿](https://so.toutiao.com/search?keyword=中秋国庆全国营业性演出票房超20亿)
 1. [南阳女主持人含泪控诉](https://so.toutiao.com/search?keyword=南阳女主持人含泪控诉)
-1. [美媒：美国或在2024年出现经济崩盘](https://so.toutiao.com/search?keyword=美媒：美国或在2024年出现经济崩盘)
 1. [吉林发布省管干部任前公示](https://so.toutiao.com/search?keyword=吉林发布省管干部任前公示)
-1. [乔布斯逝世12周年 库克缅怀](https://so.toutiao.com/search?keyword=乔布斯逝世12周年+库克缅怀)
 1. [奥运冠军和亚运冠军结婚了](https://so.toutiao.com/search?keyword=奥运冠军和亚运冠军结婚了)
 1. [《新闻联播》新主播是江苏兴化人](https://so.toutiao.com/search?keyword=《新闻联播》新主播是江苏兴化人)
 1. [专家：叙利亚军校恐袭时间点较特殊](https://so.toutiao.com/search?keyword=专家：叙利亚军校恐袭时间点较特殊)
@@ -77,7 +96,6 @@
 1. [林雨薇荣归故里请全村人吃饭](https://so.toutiao.com/search?keyword=林雨薇荣归故里请全村人吃饭)
 1. [“小犬”或最终“近粤”而不登粤](https://so.toutiao.com/search?keyword=“小犬”或最终“近粤”而不登粤)
 1. [谢远聪皮划艇激流回旋男子划艇夺冠](https://so.toutiao.com/search?keyword=谢远聪皮划艇激流回旋男子划艇夺冠)
-1. [券商人士否认A股将调整交易时间](https://so.toutiao.com/search?keyword=券商人士否认A股将调整交易时间)
 1. [四川女篮奖励三巨头每人一套房](https://so.toutiao.com/search?keyword=四川女篮奖励三巨头每人一套房)
 1. [河南一新娘结婚 婆家请人颠花轿](https://so.toutiao.com/search?keyword=河南一新娘结婚+婆家请人颠花轿)
 1. [瑞典向乌克兰提供新一轮军事援助](https://so.toutiao.com/search?keyword=瑞典向乌克兰提供新一轮军事援助)
@@ -86,11 +104,9 @@
 1. [WTT兰州站：林诗栋进男双混双四强](https://so.toutiao.com/search?keyword=WTT兰州站：林诗栋进男双混双四强)
 1. [俄罗斯解除部分柴油出口禁令](https://so.toutiao.com/search?keyword=俄罗斯解除部分柴油出口禁令)
 1. [中国香港队创亚运史上最佳战绩](https://so.toutiao.com/search?keyword=中国香港队创亚运史上最佳战绩)
-1. [亚运团长霍启刚的一天](https://so.toutiao.com/search?keyword=亚运团长霍启刚的一天)
 1. [新婚当日因红烛致婚房着火](https://so.toutiao.com/search?keyword=新婚当日因红烛致婚房着火)
 1. [周润发回应裸捐56亿港币](https://so.toutiao.com/search?keyword=周润发回应裸捐56亿港币)
 1. [王哲林出战首节共4分31秒仅0分1板](https://so.toutiao.com/search?keyword=王哲林出战首节共4分31秒仅0分1板)
-1. [3个女儿国庆在家全是单身 爸爸愁坏](https://so.toutiao.com/search?keyword=3个女儿国庆在家全是单身+爸爸愁坏)
 1. [中国男篮乔帅时代首次单场得分破百](https://so.toutiao.com/search?keyword=中国男篮乔帅时代首次单场得分破百)
 1. [新闻联播首位90后女主播亮相](https://so.toutiao.com/search?keyword=新闻联播首位90后女主播亮相)
 1. [10公里游泳马拉松投喂式喝水](https://so.toutiao.com/search?keyword=10公里游泳马拉松投喂式喝水)
@@ -98,7 +114,6 @@
 1. [韩国政府：密切监控日本排放核污水](https://so.toutiao.com/search?keyword=韩国政府：密切监控日本排放核污水)
 1. [亚运DJ柔术赛前唱《孤勇者》](https://so.toutiao.com/search?keyword=亚运DJ柔术赛前唱《孤勇者》)
 1. [国际原油价格为何大跌](https://so.toutiao.com/search?keyword=国际原油价格为何大跌)
-1. [辽宁一公园穿练功服老人被狂扇耳光](https://so.toutiao.com/search?keyword=辽宁一公园穿练功服老人被狂扇耳光)
 1. [叙利亚军方炮击反对派武装一指挥部](https://so.toutiao.com/search?keyword=叙利亚军方炮击反对派武装一指挥部)
 1. [深圳供电局：做好防御台风小犬工作](https://so.toutiao.com/search?keyword=深圳供电局：做好防御台风小犬工作)
 1. [韩国女篮胜朝鲜队夺得铜牌](https://so.toutiao.com/search?keyword=韩国女篮胜朝鲜队夺得铜牌)
@@ -129,7 +144,6 @@
 1. [游客告别长沙：长沙很好 下次还来](https://so.toutiao.com/search?keyword=游客告别长沙：长沙很好+下次还来)
 1. [中国女足开场21秒闪击破门](https://so.toutiao.com/search?keyword=中国女足开场21秒闪击破门)
 1. [南京一充气城堡坍塌多名孩子被埋](https://so.toutiao.com/search?keyword=南京一充气城堡坍塌多名孩子被埋)
-1. [伊拉克央行：将禁止美元提现及交易](https://so.toutiao.com/search?keyword=伊拉克央行：将禁止美元提现及交易)
 1. [普京：我曾提议俄加入北约但遭拒绝](https://so.toutiao.com/search?keyword=普京：我曾提议俄加入北约但遭拒绝)
 1. [女生回家一身长裙帮父母收玉米](https://so.toutiao.com/search?keyword=女生回家一身长裙帮父母收玉米)
 1. [菲律宾提高42个商业机场警戒等级](https://so.toutiao.com/search?keyword=菲律宾提高42个商业机场警戒等级)
@@ -138,13 +152,11 @@
 1. [美媒：朝鲜已开始向俄罗斯提供火炮](https://so.toutiao.com/search?keyword=美媒：朝鲜已开始向俄罗斯提供火炮)
 1. [中国女足出战亚运铜牌赛](https://so.toutiao.com/search?keyword=中国女足出战亚运铜牌赛)
 1. [“小犬”靠近广东 局地阵风达9级](https://so.toutiao.com/search?keyword=“小犬”靠近广东+局地阵风达9级)
-1. [孩子参加父母的婚礼成主角](https://so.toutiao.com/search?keyword=孩子参加父母的婚礼成主角)
 1. [专家评乌总统夫人百万美元买珠宝](https://so.toutiao.com/search?keyword=专家评乌总统夫人百万美元买珠宝)
 1. [杭州亚运会闭幕式剧透来了](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式剧透来了)
 1. [于和伟：别带偏了 黎志田还是坏人](https://so.toutiao.com/search?keyword=于和伟：别带偏了+黎志田还是坏人)
 1. [女子回应酒店发现摄像头：考虑起诉](https://so.toutiao.com/search?keyword=女子回应酒店发现摄像头：考虑起诉)
 1. [曾在国庆大阅兵担任领队的将军履新](https://so.toutiao.com/search?keyword=曾在国庆大阅兵担任领队的将军履新)
-1. [男子不慎砸头躲奶奶怀里哭](https://so.toutiao.com/search?keyword=男子不慎砸头躲奶奶怀里哭)
 1. [袁琦琦说男生没肌肉要反思](https://so.toutiao.com/search?keyword=袁琦琦说男生没肌肉要反思)
 1. [李强将出席杭州亚运会闭幕式](https://so.toutiao.com/search?keyword=李强将出席杭州亚运会闭幕式)
 1. [为何中国女篮关键时刻可以不掉链子](https://so.toutiao.com/search?keyword=为何中国女篮关键时刻可以不掉链子)
